<resources>
    <string name="app_name">Labo 4</string>
    <string name="note_title">My notes</string>
    <string name="generate">Generate</string>
    <string name="delete">Delete</string>
    <string name="creationDate">Creation date</string>
    <string name="eta">ETA</string>
    <string name="sort">sort</string>
    <string name="late">Late</string>
    <string name="soon">Soon</string>
    <string name="seconds">%d seconds</string>
    <string name="minutes">%d minutes</string>
    <string name="hours">%d hours</string>
    <string name="days">%d days</string>
    <string name="weeks">%d weeks</string>
    <string name="months">%d months</string>
</resources>