<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id ="@+id/main_menu_sort"
        android:title="@string/sort"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/sort_menu_creation_date"
                android:title="@string/creationDate"/>
            <item
                android:id="@+id/sort_menu_eta"
                android:title="@string/eta"/>
        </menu>
    </item>
    <item
        android:id ="@+id/main_menu_generate"
        android:title="@string/generate" />
    <item
        android:id ="@+id/main_menu_delete"
        android:title ="@string/delete" />
</menu>